Memory setting for Java processes
Apply same settiing to GraphHopper and ElasticSearch.
Resolve #382